maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:57: error: '=' expected but ';' found.
  setIndication(foundBaggle()(0),foundBaggle()(1))
^